# protocol

./: Cargo.toml  README.md  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: build.yml
derive/: Cargo.toml
derive/src/: lib.rs
implementors/protocol/: trait.Coalesce.js
protocol/: all.html  attr.protocol.html  enum.ForkContextRefError.html  enum.JoinContextOwnedError.html  enum.JoinContextSharedError.html  index.html  sidebar-items.js  struct.BottomCoalesce.html  struct.FlatCoalesce.html  struct.FlatUnravel.html  struct.ForkContextRef.html  struct.JoinContextOwned.html  struct.JoinContextShared.html  trait.CloneContext.html  trait.ContextReference.html  trait.Contextualize.html  trait.Dispatch.html  trait.Finalize.html  trait.FinalizeImmediate.html  trait.Fork.html  trait.Join.html  trait.Notify.html  trait.Read.html  trait.ReferenceContext.html  trait.ShareContext.html  trait.Write.html  type.Notification.html  type.RefContextTarget.html
protocol/adapter/: index.html  sidebar-items.js  struct.Default.html  trait.Adapt.html
protocol/allocated/: index.html  sidebar-items.js  struct.ProtocolError.html  trait.Flatten.html  trait.FromError.html
protocol/future/: fn.err.html  fn.ok.html  fn.ready.html  index.html  sidebar-items.js  struct.Either.html  struct.Map.html  struct.MapErr.html  struct.MapOk.html  struct.Ready.html  trait.Future.html  trait.FutureExt.html
protocol/tuples/: struct.FlatCoalesce.html  struct.FlatUnravel.html
src/: allocated.rs  arrays.rs  lib.rs  option.rs  pass.rs  primitives.rs  result.rs  tuples.rs
(+105 files in other folders)
